Mon May 24 2004  Joe Allen <jhallen@world.std.com>

	Fix bg_reg -> bg_red.

Mon May 24 2004  Joe Allen <jhallen@world.std.com>

	Smart indent and backspace now work even if cursor
	is not right at indentation point.  Also autoindent
	does not happen if cursor is on a space or tab character.

	Jmacs: ^W (cut) now works if mark is after point.  (Added -autoswap
	mode).  Also: preserve mark and point positions during block
	operations.

Wed May 19 2004  Joe Allen <jhallen@world.std.com>

	Allow options after strings in syntax files.

Wed May 19 2004  Joe Allen <jhallen@world.std.com>

	More fixes for Cygwin: shell windows now
	work properly.

Tue May 18 2004  Joe Allen <jhallen@world.std.com>

	Changed ESC y to yank in joerc.  Left ESC ^Y
	as yankpop.

	Added "spring" escape sequence for help text.

Mon May 17 2004  Joe Allen <jhallen@world.std.com>

	Fix backspace handling in shell windows.
	Ring bell when we get ^G.

Sun May 16 2004  Joe Allen <jhallen@world.std.com>

	Fix -syntax and -encoding on command line.

	Check for "pty.h" when openpty is used.

Sun May 16 2004  Joe Allen <jhallen@world.std.com>

	Fix mason bug.
	Change ^K ^M back to move block.
	^K H in jstar mode is "nmark".

Fri May 14 2004  Joe Allen <jhallen@world.std.com>

	Mason highlighter

Fri May 14 2004  Joe Allen <jhallen@world.std.com>

	Many jpicorc.in improvements.

Thu May 13 2004  Joe Allen <jhallen@world.std.com>

	Improve exit messages.

	Improve 'lose' which is for jmacs.

	Improve ^X for jpico.

	Got rid of "end of processs" message in shell windows.

	Shell windows can now be orphaned and duplicated (process
	is associated with B instead of BW).

	Shell window input taken from cmd.c instead of in
	actual edit functions.

	Improved 'lose' again- now it fill in windows with any
	orphaned buffers it can find.

Thu May 13 2004  Joe Allen <jhallen@world.std.com>

	Small compile fix.

Wed May 12 2004  Joe Allen <jhallen@world.std.com>
